# embassy-badger2040

./: Cargo.toml  README.md  rust-toolchain.toml
examples/: aron.rs  blinky_two_tasks.rs  ethernet_w5500_multisocket.rs  ethernet_w5500_udp.rs  flash.rs  i2c_async.rs  i2c_blocking.rs  i2c_slave.rs  pio_async.rs  pio_hd44780.rs  pio_rotary_encoder.rs  pio_stepper.rs  pio_uart.rs  pio_ws2812.rs  spi_async.rs  uart.rs  uart_buffered_split.rs  usb_ethernet.rs  usb_hid_keyboard.rs  usb_hid_mouse.rs  usb_midi.rs  usb_serial.rs  usb_serial_with_logger.rs
src/: badger.rs  buttons.rs  display.rs  lib.rs  main.rs  peripherals.rs  uc8151.rs
